--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap");
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-body{
-  font-family: 'Montserrat', sans-serif;
-  background-color: #F9F7FD;
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #f9f7fd;
+  font-size: 62, 5%;
 }
