Fix import of ItemListContainer in App.js

--- a/src/attributes/styles/ItemCount.css
+++ b/src/attributes/styles/ItemCount.css
@@ -1,6 +1,6 @@
 .itemCountContainer {
   font-family: "Montserrat", sans-serif;
-  width: 20rem;
+  width: auto;
   background-color: #f8defa;
   margin: 1rem;
 }
