--- a/src/attributes/styles/ItemListContainer.css
+++ b/src/attributes/styles/ItemListContainer.css
@@ -1,4 +1,11 @@
 .itemListContainer {
-  display: flex;
-  justify-content: center;
+  min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10vh;
+    max-width: 1400px;
+    margin: auto;
+    flex-wrap: wrap;
 }
