--- a/src/attributes/styles/ItemCount.css
+++ b/src/attributes/styles/ItemCount.css
@@ -28,6 +28,7 @@
   width: 2rem;
   border-radius: 5px;
   text-align: center;
+  margin: 1rem
 }
 
 .valueItem {
@@ -35,5 +36,14 @@
 }
 
 .buttonContainer {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonCart{
   text-align: center;
 }
